js/js.translator/testData/incremental/invalidation/KT-85270/main/m.kt
fun box(stepId: Int, isWasm: Boolean): String {
    return if (useStdlibDeclarationUsedInKTest()) "OK" else "FAIL"
}